--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-itertools = "0.10.5"
-#tempfile = "3.3.0"
+itertools = "0.12.0"
+tempfile = "3.8.1"
+regex = "1.10.2"
+log = "0.4.20"
 #serde_json = "1.0"
 #petgraph = "0.6.2"
 #pathfinding = "4.1.1"
