--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ itertools = "0.12.0"
 tempfile = "3.8.1"
 regex = "1.10.2"
 log = "0.4.20"
+num = "0.4.1"
 #serde_json = "1.0"
 #petgraph = "0.6.2"
 #pathfinding = "4.1.1"
