--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4.20"
 num = "0.4.1"
 #serde_json = "1.0"
 #petgraph = "0.6.2"
-#pathfinding = "4.1.1"
+pathfinding = "4.1.1"
 #rayon = "1.6.1"
 #quickcheck = "1.0.3"
 #quickcheck_macros = "1.0.0"
