--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ num = "0.4.1"
 #petgraph = "0.6.2"
 pathfinding = "4.1.1"
 rustc-hash = "1.1.0"
-#rayon = "1.6.1"
+rayon = "1.6.1"
 #quickcheck = "1.0.3"
 #quickcheck_macros = "1.0.0"
 
