--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rustc-hash = "1.1.0"
 rayon = "1.6.1"
 #quickcheck = "1.0.3"
 #quickcheck_macros = "1.0.0"
+array2d = "0.3.1"
 
 [profile.release]
 debug = true
