--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rayon = "1.6.1"
 #quickcheck = "1.0.3"
 #quickcheck_macros = "1.0.0"
 array2d = "0.3.1"
+clap = { version = "4.4.11", features = ["derive", "env"] }
 
 [profile.release]
 debug = true
