--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rayon = "1.6.1"
 #quickcheck_macros = "1.0.0"
 array2d = "0.3.1"
 clap = { version = "4.4.11", features = ["derive", "env"] }
+recap = "0.1.2"
 
 [profile.release]
 debug = true
