--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ rayon = "1.6.1"
 array2d = "0.3.1"
 clap = { version = "4.4.11", features = ["derive", "env"] }
 recap = "0.1.2"
+gomez = "0.5.0"
+plotters = { version = "0.3.5", features = [] }
 
 [profile.release]
 debug = true
