--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.4.11", features = ["derive", "env"] }
 recap = "0.1.2"
 gomez = "0.5.0"
 plotters = { version = "0.3.5", features = [] }
+bit-set = "0.5"
 
 [profile.release]
 debug = true
